// Copyright (c) 2019 Minoru Osuka
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 		http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package raft;

option go_package = "github.com/mosuka/blast/protobuf/raft";


message Node {
    string id = 1;
    string bind_addr = 2;
    string grpc_addr = 3;
    string http_addr = 4;
    bool leader = 5;
    string data_dir = 6;
}

message Cluster {
    repeated Node nodes = 1;
}

message JoinRequest {
    Node node = 1;
}

message LeaveRequest {
    Node node = 1;
}

message GetNodeResponse {
    Node node = 1;
}

message GetClusterResponse {
    Cluster cluster = 1;
}
